# shake-chess

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: sheet.ase
src/: board.rs  game.rs  lib.rs  main.rs  render.rs  svg.rs  ui.rs
src/ai/: mod.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
